# SVG-classifier

./: .gitignore  CLAUDE.md  LICENSE  README.md  icon-labeler-extension-plan.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wxt.config.ts
lab/: .gitignore  TRAINING.md  pyproject.toml  run_full_training.sh
lab/config/: labels.json  preprocess.json  train.yaml
lab/data/: README.md  SOURCES.tsv  concepts.tsv  summary.json
lab/data/relabel/: apply_review.py  build_inventory.py  build_labels.py  concept_labels.jsonl  prep_review.py  relabel.py  split_batches.py
lab/data/relabel/review/: out_000.json  out_001.json  out_002.json  out_003.json  out_004.json  out_005.json  out_006.json  out_007.json
lab/data/wild/: README.md  ingest_wild.py
lab/iconlab/: __init__.py  augment.py  config.py  dataset.py  evaluate.py  export.py  manifest.py  model.py  paths.py  preprocess.py  render.py  taxonomy.py  train.py
lab/scripts/: _bootstrap.py  build_dataset.py  build_provenance.py  evaluate.py  export.py  fetch_icons.sh  make_mock_data.py  smoke.py  train.py
lab/tests/: test_config.py  test_dataset.py  test_export_parity.py  test_preprocess.py  test_render.py  test_taxonomy.py
scripts/: copy-ort.mjs
src/content/: cache.ts  controller.ts  ephemeral.ts  extract.ts  freeLabel.ts  handled.ts  overlay.ts  rasterize.ts  scanner.ts
src/entrypoints/: background.ts
tests/: config.test.ts  denylist.test.ts  ephemeral.test.ts  extract.test.ts  freeLabel.test.ts  hash.test.ts  labels.test.ts  mockClassifier.test.ts  overlay.test.ts  tensor.test.ts
(+19 files in other folders)
