[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iconlab"
version = "0.1.0"
description = "Model fine-tuning & eval lab for the icon-labeler Chrome extension (plan §5)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "see repo LICENSE" }
dependencies = [
    "numpy>=1.26",
    "pillow>=10.2",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "scikit-learn>=1.4",
    "torch>=2.4",
    "timm>=1.0.7",
    "onnx>=1.16",
    "onnxruntime>=1.18",
]

[project.optional-dependencies]
# Deployment-faithful renderer (Chromium Canvas). After install run:
#   playwright install chromium
render-chromium = ["playwright>=1.44"]
# Lower-fidelity renderers (no browser).
render-cairo = ["cairosvg>=2.7"]      # needs system Cairo: `brew install cairo`
render-svglib = ["svglib>=1.5", "reportlab>=4.1"]
# Experiment tracking (optional, plan §5.7).
track = ["wandb>=0.17"]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[tool.setuptools]
packages = ["iconlab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
